@@ -1,6 +1,8 @@
 # Media Center
 > Projeto de DSS 19/20
 
+![Main Page](main.PNG)
+
 ## Requisitos
 
 - Maven
@@ -28,22 +30,9 @@ SHOW VARIABLES LIKE "secure_file_priv";
 ```
 mvn clean compile exec:java
 ```
-=======
-
-# MediaCenter
-
-![Main Page](main.PNG)
-
-
-## VMOPTIONS
---module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml
-
-%PATH_TO_FX% -> "C:\Program Files\Java\javafx-sdk-13\lib"
 
 ## DEPENDENCIES
 - VLC
-- Java 13
-- JavaFX 13
 
 ## Disclaimer 
 This is not a final product.
